# Geo-Checker

./: .gitignore  README.md  make_evb.js
cpp/: CMakeLists.txt  Dockerfile  build.sh  install-linux-desktop.sh  pack-enigma.bat
cpp/include/: dat_parser.hpp  geochecker_types.hpp  lang_ui_config.hpp  mainwindow.hpp
cpp/resources/: geochecker.desktop  geochecker.rc  ico_to_png.py
cpp/src/: dat_parser.cpp  geochecker_types.cpp  main.cpp  main_cli.cpp  mainwindow.cpp
proto/: routercommon.proto
